Ensure images shrink on small screens.

--- a/java/doc-files/style.css
+++ b/java/doc-files/style.css
@@ -905,3 +905,6 @@ table.striped > tbody > tr > th, table.striped > tbody > tr > td {
 table.striped > tbody > tr > th {
     font-weight: normal;
 }
+figure img {
+    max-width: 90vw;
+}
